fix: overflow auto in grid field

--- a/frappe/public/less/form_grid.less
+++ b/frappe/public/less/form_grid.less
@@ -73,6 +73,7 @@
 	padding: 10px 15px;
 	max-height: 200px;
 	border-right: 1px solid @border-color;
+	overflow: auto;
 }
 
 .editable-form .grid-static-col.bold {
